@@ -1,49 +1,124 @@
-<?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://www.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<parent>
-		<groupId>org.springframework.boot</groupId>
-		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>3.2.1</version>
-	</parent>
 
 	<groupId>lv.degra</groupId>
 	<artifactId>accounting</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>1.0</version>
 	<packaging>pom</packaging>
-	<name>accounting</name>
-	<description>Degra accounting</description>
 
-	<properties>
-		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-		<java.version>17</java.version>
-		<javafx.version>17.0.12</javafx.version>
-		<postgres.version>42.7.1</postgres.version>
-		<jacoco.version>0.8.8</jacoco.version>
-		<sonar.coverage.jacoco.xmlReportPaths>${project.basedir}/target/jacoco/jacoco.xml</sonar.coverage.jacoco.xmlReportPaths>
-		<sonar.organization>elmits</sonar.organization>
-		<sonar.host.url>https://sonarcloud.io</sonar.host.url>
-		<sonar.projectKey>degra_accounting</sonar.projectKey>
-		<sonar.java.binaries>target/classes</sonar.java.binaries>
-		<sonar.exclusions>**/*.java</sonar.exclusions>
-	</properties>
-	<dependencies>
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-autoconfigure</artifactId>
-			<version>3.3.3</version>
-		</dependency>
-	</dependencies>
+	<parent>
+		<groupId>org.springframework.boot</groupId>
+		<artifactId>spring-boot-starter-parent</artifactId>
+		<version>3.3.4</version>
+		<relativePath />
+	</parent>
 
 	<modules>
 		<module>core</module>
 		<module>desktop</module>
-		<module>companies</module>
-		<module>web</module>
+		<module>company</module>
+		<module>address</module>
 	</modules>
 
+	<properties>
+		<java.version>21</java.version>
+		<javafx.version>21</javafx.version>
+		<spring.version>3.3.4</spring.version>
+		<postgres.version>42.7.1</postgres.version>
+		<sonar.coverage.jacoco.xmlReportPaths>
+			${project.basedir}${file.separator}target${file.separator}jacoco-aggregate${file.separator}jacoco.xml
+		</sonar.coverage.jacoco.xmlReportPaths>
+		<sonar.host.url>http://localhost:9000</sonar.host.url>
+		<sonar.projectKey>kaspars.batrags_degra_10f646f9-9480-4022-9a8d-8b47125f9b39</sonar.projectKey>
+		<sonar.token>${env.SONAR_TOKEN}</sonar.token>
+		<sonar.projectName>degra</sonar.projectName>
+		<sonar.qualitygate.wait>true</sonar.qualitygate.wait>
+		<sonar.scm.provider>git</sonar.scm.provider>
+	</properties>
+	<dependencies>
+		<dependency>
+			<groupId>org.hibernate.validator</groupId>
+			<artifactId>hibernate-validator</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>jakarta.platform</groupId>
+			<artifactId>jakarta.jakartaee-api</artifactId>
+			<version>10.0.0</version>
+			<scope>provided</scope>
+		</dependency>
+		<dependency>
+			<groupId>jakarta.validation</groupId>
+			<artifactId>jakarta.validation-api</artifactId>
+		</dependency>
+		<!-- JSR 305 - nepieciešams validācijas anotācijām -->
+		<dependency>
+			<groupId>com.google.code.findbugs</groupId>
+			<artifactId>jsr305</artifactId>
+			<version>3.0.2</version>
+		</dependency>
+		<dependency>
+			<groupId>org.mockito</groupId>
+			<artifactId>mockito-core</artifactId>
+			<version>5.13.0</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.mockito</groupId>
+			<artifactId>mockito-junit-jupiter</artifactId>
+			<version>5.13.0</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.junit.jupiter</groupId>
+			<artifactId>junit-jupiter-api</artifactId>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.junit.jupiter</groupId>
+			<artifactId>junit-jupiter-engine</artifactId>
+			<scope>test</scope>
+		</dependency>
+	</dependencies>
+
+	<dependencyManagement>
+		<dependencies>
+			<dependency>
+				<groupId>org.springframework.boot</groupId>
+				<artifactId>spring-boot-dependencies</artifactId>
+				<version>${spring.version}</version>
+				<type>pom</type>
+				<scope>import</scope>
+			</dependency>
+			<dependency>
+				<groupId>org.springframework.boot</groupId>
+				<artifactId>spring-boot-starter-tomcat</artifactId>
+				<version>${spring.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.springframework.boot</groupId>
+				<artifactId>spring-boot-starter-cache</artifactId>
+				<version>${spring.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>commons-io</groupId>
+				<artifactId>commons-io</artifactId>
+				<version>2.17.0</version>
+			</dependency>
+
+		</dependencies>
+	</dependencyManagement>
+	<profiles>
+		<profile>
+			<id>skip-sonar</id>
+			<activation>
+				<activeByDefault>false</activeByDefault>
+			</activation>
+			<properties>
+				<sonar.skip>true</sonar.skip>
+			</properties>
+		</profile>
+	</profiles>
 	<build>
 		<plugins>
 			<plugin>
@@ -58,29 +133,6 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
-				<version>3.2.1</version>
-				<executions>
-					<execution>
-						<goals>
-							<goal>repackage</goal>
-						</goals>
-					</execution>
-				</executions>
-				<configuration>
-					<skip>true</skip>
-				</configuration>
-			</plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-surefire-plugin</artifactId>
-				<version>3.2.3</version>
-				<configuration>
-					<forkCount>1</forkCount>
-					<reuseForks>false</reuseForks>
-					<argLine>
-						--add-exports javafx.graphics/com.sun.javafx.sg.prism=ALL-UNNAMED --add-exports javafx.graphics/com.sun.javafx.tk=ALL-UNNAMED --add-exports javafx.graphics/com.sun.glass.ui=ALL-UNNAMED --add-exports javafx.graphics/com.sun.prism=ALL-UNNAMED --add-exports javafx.graphics/com.sun.javafx.geom=ALL-UNNAMED --add-exports javafx.graphics/com.sun.javafx.scene=ALL-UNNAMED --add-exports javafx.graphics/com.sun.javafx.scene.input=ALL-UNNAMED --add-opens javafx.graphics/com.sun.javafx.tk=ALL-UNNAMED --add-opens javafx.graphics/com.sun.javafx.tk.quantum=ALL-UNNAMED
-					</argLine>
-				</configuration>
 			</plugin>
 			<plugin>
 				<groupId>org.sonarsource.scanner.maven</groupId>
@@ -98,24 +150,83 @@
 			<plugin>
 				<groupId>org.jacoco</groupId>
 				<artifactId>jacoco-maven-plugin</artifactId>
-				<version>0.8.8</version>
+				<version>0.8.12</version>
 				<executions>
 					<execution>
-						<id>default-report</id>
+						<id>report-aggregate</id>
 						<goals>
-							<goal>report</goal>
+							<goal>report-aggregate</goal>
+						</goals>
+						<phase>verify</phase>
+						<configuration>
+							<outputDirectory>${project.build.directory}/jacoco-aggregate</outputDirectory>
+							<dataFileIncludes>${project.build.directory}/jacoco-merged.exec</dataFileIncludes>
+						</configuration>
+					</execution>
+					<execution>
+						<id>merge</id>
+						<phase>verify</phase>
+						<goals>
+							<goal>merge</goal>
 						</goals>
 						<configuration>
-							<outputDirectory>${project.build.directory}/site/jacoco</outputDirectory>
-							<formats>
-								<format>XML</format>
-							</formats>
+							<fileSets>
+								<fileSet>
+									<directory>/address/target/jacoco.exec</directory>
+									<includes>
+										<include>**/*.exec</include>
+									</includes>
+								</fileSet>
+								<fileSet>
+									<directory>/company/target/jacoco.exec</directory>
+									<includes>
+										<include>**/*.exec</include>
+									</includes>
+								</fileSet>
+								<fileSet>
+									<directory>/core/target/jacoco.exec</directory>
+									<includes>
+										<include>**/*.exec</include>
+									</includes>
+								</fileSet>
+								<fileSet>
+									<directory>/desktop/target/jacoco.exec</directory>
+									<includes>
+										<include>**/*.exec</include>
+									</includes>
+								</fileSet>
+
+							</fileSets>
+							<destFile>${project.build.directory}/jacoco-merged.exec</destFile>
+						</configuration>
+					</execution>
+					<execution>
+						<goals>
+							<goal>prepare-agent</goal>
+						</goals>
+					</execution>
+					<execution>
+						<id>check</id>
+						<goals>
+							<goal>check</goal>
+						</goals>
+						<configuration>
+							<rules>
+								<rule>
+									<element>BUNDLE</element>
+									<limits>
+										<limit>
+											<counter>INSTRUCTION</counter>
+											<value>COVEREDRATIO</value>
+											<minimum>0.05</minimum>
+										</limit>
+									</limits>
+								</rule>
+							</rules>
 						</configuration>
 					</execution>
 				</executions>
 			</plugin>
 		</plugins>
-		<defaultGoal>package</defaultGoal>
 	</build>
 </project>
-
